[package]
name = "callback-future"
version = "0.1.0"
authors = ["Kostiantyn Syrykh <cs.this@gmail.com>"]
description = "Adapter between callbacks and futures"
keywords = ["futures", "async", "future", "callback"]
readme = "README.md"
repository = "https://github.com/syrykh/callback-future-rs.git"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await", "executor"] }
